PR1 add Redis support for rate limiting

--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,45 @@ POSTGRES_USER=terravoy
 POSTGRES_PASSWORD=terravoy_dev
 POSTGRES_DB=terravoy
 PORT=3000
+REDIS_URL=redis://localhost:6379/0
+REDIS_PORT=6379
+REDIS_CONNECT_TIMEOUT_MS=5000
+REDIS_MAX_RETRIES=50
 TERRA_JWT_SECRET=dev_terra_secret_change_me
 TERRA_DEV_TOKEN=dev_terra_token
+PAYMENT_PROVIDER=mock
+PAYMENT_WEBHOOK_SECRET=
+MOCK_WEBHOOK_AUTOFIRE=1
+PAYMENTS_WEBHOOK_ONLY=1
+WECHAT_PAY_APP_ID=
+WECHAT_PAY_MCH_ID=
+WECHAT_PAY_API_V3_KEY=
+WECHAT_PAY_CERT_SERIAL=
+WECHAT_PAY_PRIVATE_KEY=
+WECHAT_PAY_WEBHOOK_SECRET=
+ALIPAY_APP_ID=
+ALIPAY_PRIVATE_KEY=
+ALIPAY_PUBLIC_KEY=
+ALIPAY_WEBHOOK_SECRET=
+PAYMENTS_JOB_REPLAY_INTERVAL_MIN=5
+PAYMENTS_JOB_RECONCILE_INTERVAL_MIN=10
+PAYMENTS_JOB_CLEANUP_INTERVAL_MIN=30
+PAYMENTS_INTENT_EXPIRE_MIN=60
 LOCAL_JWT_SECRET=dev_local_jwt_secret
 LOCAL_JWT_TTL_MIN=10
+AUTH_JWT_SECRET=dev_auth_jwt_secret
+AUTH_ACCESS_TTL_SECONDS=3600
+AUTH_REFRESH_TTL_SECONDS=2592000
+AUTH_SMS_EXPIRES_SECONDS=300
+AUTH_SMS_COOLDOWN_SECONDS=60
+AUTH_DEBUG_SMS=false
+AUTH_SMS_MODE=mock
+AUTH_SMS_PROVIDER=
+AUTH_SMS_PROVIDER_KEY=
+AUTH_SMS_PROVIDER_SECRET=
+AUTH_SMS_PROVIDER_SIGN=
+AUTH_SMS_PROVIDER_TEMPLATE_LOGIN=
+AUTH_SMS_PROVIDER_TEMPLATE_REGISTER=
 LEAN_APP_ID=j66DPN5aeyYrMyytELnR2CHj-gzGzoHsz
 LEAN_APP_KEY=VoEciTCuMlzhQzd3y49wYy2T
 LEAN_SERVER=https://j66dpn5a.lc-cn-n1-shared.com
@@ -15,3 +50,17 @@ DEV_AUTH_BYPASS=1
 ENABLE_MATCH_WORKER=0
 MATCH_WORKER_INTERVAL_MS=1000
 MATCH_WORKER_BATCH=50
+USE_OSS_UPLOADER=true
+OSS_ENDPOINT=
+OSS_BUCKET_PUBLIC=
+OSS_BUCKET_PRIVATE=
+OSS_ACCESS_KEY_ID=
+OSS_ACCESS_KEY_SECRET=
+OSS_PUBLIC_BASE_URL=
+PUBLIC_MEDIA_BASE_URL=
+ADMIN_READ_URL_KEY=
+ADMIN_API_KEY=
+OSS_UPLOAD_EXPIRES_SECONDS=900
+ALLOW_LEGACY_STORAGE=false
+SAFETY_CHECK_RL_USER_PER_MIN=120
+SAFETY_CHECK_RL_IP_USER_PER_MIN=240
