PR6 add Go IM gateway

--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,11 @@ FCM_SERVICE_ACCOUNT_JSON=
 FCM_SERVICE_ACCOUNT_PATH=
 PUSH_MAX_RETRIES=5
 PUSH_RETRY_BACKOFF_MS=1000
+IM_WS_PORT=8081
+IM_API_BASE_URL=http://api:3000
+IM_PRESENCE_TTL_SECONDS=75
+IM_PRESENCE_REFRESH_SECONDS=30
+IM_RATE_USER_MAX=20
+IM_RATE_USER_WINDOW_MS=10000
+IM_RATE_THREAD_MAX=30
+IM_RATE_THREAD_WINDOW_MS=10000
