--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,5 +119,30 @@ services:
       PUSH_RETRY_BACKOFF_MS: ${PUSH_RETRY_BACKOFF_MS:-1000}
     command: ["node", "src/workers/push_worker.js"]
 
+  im-gateway:
+    build:
+      context: ./im-gateway
+      dockerfile: ./Dockerfile
+    container_name: terravoy-im-gateway
+    depends_on:
+      api:
+        condition: service_started
+      redis:
+        condition: service_started
+    restart: unless-stopped
+    environment:
+      IM_WS_ADDR: :8081
+      IM_API_BASE_URL: ${IM_API_BASE_URL:-http://api:3000}
+      REDIS_URL: ${REDIS_URL:-redis://redis:6379/0}
+      AUTH_JWT_SECRET: ${AUTH_JWT_SECRET:-dev_auth_jwt_secret}
+      IM_PRESENCE_TTL_SECONDS: ${IM_PRESENCE_TTL_SECONDS:-75}
+      IM_PRESENCE_REFRESH_SECONDS: ${IM_PRESENCE_REFRESH_SECONDS:-30}
+      IM_RATE_USER_MAX: ${IM_RATE_USER_MAX:-20}
+      IM_RATE_USER_WINDOW_MS: ${IM_RATE_USER_WINDOW_MS:-10000}
+      IM_RATE_THREAD_MAX: ${IM_RATE_THREAD_MAX:-30}
+      IM_RATE_THREAD_WINDOW_MS: ${IM_RATE_THREAD_WINDOW_MS:-10000}
+    ports:
+      - "${IM_WS_PORT:-8081}:8081"
+
 volumes:
   terravoy_pg:
