--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.12.0",
     "pino": "^9.4.0",
     "pino-pretty": "^10.3.0",
+    "prom-client": "^15.1.3",
     "redis": "^4.6.13"
   }
 }
