phase0-1 add IM migration audit and Go IM skeleton

--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,8 @@ IM_RATE_USER_MAX=20
 IM_RATE_USER_WINDOW_MS=10000
 IM_RATE_THREAD_MAX=30
 IM_RATE_THREAD_WINDOW_MS=10000
+IM_API_PORT=8090
+IM_DB_DSN=postgres://terravoy:terravoy_dev@im-db:5432/terravoy?sslmode=disable
+IM_REDIS_URL=redis://im-redis:6379/0
+IM_RETENTION_MATCH_DAYS=14
+IM_RETENTION_ORDER_DAYS=180
