phase2 implement Go im-api core

--- a/im/docker-compose.im.yml
+++ b/im/docker-compose.im.yml
@@ -45,6 +45,12 @@ services:
       AUTH_JWT_SECRET: ${AUTH_JWT_SECRET:-dev_auth_jwt_secret}
       IM_RETENTION_MATCH_DAYS: ${IM_RETENTION_MATCH_DAYS:-14}
       IM_RETENTION_ORDER_DAYS: ${IM_RETENTION_ORDER_DAYS:-180}
+      OSS_ENDPOINT: ${OSS_ENDPOINT:-}
+      OSS_BUCKET_PUBLIC: ${OSS_BUCKET_PUBLIC:-}
+      OSS_ACCESS_KEY_ID: ${OSS_ACCESS_KEY_ID:-}
+      OSS_ACCESS_KEY_SECRET: ${OSS_ACCESS_KEY_SECRET:-}
+      OSS_PUBLIC_BASE_URL: ${OSS_PUBLIC_BASE_URL:-}
+      OSS_UPLOAD_EXPIRES_SECONDS: ${OSS_UPLOAD_EXPIRES_SECONDS:-900}
     ports:
       - "${IM_API_PORT:-8090}:8090"
 
