--- a/server/package.json
+++ b/server/package.json
@@ -17,13 +17,10 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.27.2",
     "fastify-plugin": "^4.5.1",
-    "firebase-admin": "^12.5.0",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
     "pg": "^8.12.0",
     "pino": "^9.4.0",
-    "pino-pretty": "^10.3.0",
-    "prom-client": "^15.1.3",
-    "redis": "^4.6.13"
+    "pino-pretty": "^10.3.0"
   }
 }
