全量同步: 2026-01-04 生产版本 - 删除旧文件，新增IM、支付、用户等模块

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,16 @@ services:
       MATCH_WORKER_INTERVAL_MS: ${MATCH_WORKER_INTERVAL_MS:-1000}
       MATCH_WORKER_BATCH: ${MATCH_WORKER_BATCH:-50}
       DEV_AUTH_BYPASS: ${DEV_AUTH_BYPASS:-0}
+      HOST_CERT_AUTO_APPROVE: ${HOST_CERT_AUTO_APPROVE:-0}
+      USE_OSS_UPLOADER: ${USE_OSS_UPLOADER:-false}
+      OSS_ENDPOINT: ${OSS_ENDPOINT:-}
+      OSS_BUCKET_PUBLIC: ${OSS_BUCKET_PUBLIC:-}
+      OSS_BUCKET_PRIVATE: ${OSS_BUCKET_PRIVATE:-}
+      OSS_ACCESS_KEY_ID: ${OSS_ACCESS_KEY_ID:-}
+      OSS_ACCESS_KEY_SECRET: ${OSS_ACCESS_KEY_SECRET:-}
+      OSS_PUBLIC_BASE_URL: ${OSS_PUBLIC_BASE_URL:-}
+      PUBLIC_MEDIA_BASE_URL: ${PUBLIC_MEDIA_BASE_URL:-}
+      IM_API_BASE_URL: ${IM_API_BASE_URL:-http://host.docker.internal:8090}
     ports:
       - "${PORT:-3000}:3000"
     command: ["npm", "run", "start"]
@@ -79,6 +89,16 @@ services:
       MATCH_WORKER_INTERVAL_MS: ${MATCH_WORKER_INTERVAL_MS:-1000}
       MATCH_WORKER_BATCH: ${MATCH_WORKER_BATCH:-50}
       DEV_AUTH_BYPASS: ${DEV_AUTH_BYPASS:-0}
+      HOST_CERT_AUTO_APPROVE: ${HOST_CERT_AUTO_APPROVE:-0}
+      USE_OSS_UPLOADER: ${USE_OSS_UPLOADER:-false}
+      OSS_ENDPOINT: ${OSS_ENDPOINT:-}
+      OSS_BUCKET_PUBLIC: ${OSS_BUCKET_PUBLIC:-}
+      OSS_BUCKET_PRIVATE: ${OSS_BUCKET_PRIVATE:-}
+      OSS_ACCESS_KEY_ID: ${OSS_ACCESS_KEY_ID:-}
+      OSS_ACCESS_KEY_SECRET: ${OSS_ACCESS_KEY_SECRET:-}
+      OSS_PUBLIC_BASE_URL: ${OSS_PUBLIC_BASE_URL:-}
+      PUBLIC_MEDIA_BASE_URL: ${PUBLIC_MEDIA_BASE_URL:-}
+      IM_API_BASE_URL: ${IM_API_BASE_URL:-http://host.docker.internal:8090}
     command: ["npm", "run", "start"]
 
 volumes:
