chore(backend): require cors origins in staging/prod

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,7 @@ AUTH_SMS_PROVIDER_SECRET=
 AUTH_SMS_PROVIDER_SIGN=
 AUTH_SMS_PROVIDER_TEMPLATE_LOGIN=
 AUTH_SMS_PROVIDER_TEMPLATE_REGISTER=
+CORS_ORIGINS=https://admin-staging.example.com,https://app-staging.example.com
 DEV_AUTH_BYPASS=1
 ENABLE_MATCH_WORKER=0
 MATCH_WORKER_INTERVAL_MS=1000
