chore(staging): add prod template and strict env checks

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,5 +1,5 @@
-# Backend staging env template
-NODE_ENV=staging
+# Backend production env template
+NODE_ENV=production
 PORT=3000
 
 # Database
@@ -13,12 +13,12 @@ POSTGRES_DB=
 REDIS_URL=
 
 # Media / IM
-PUBLIC_MEDIA_BASE_URL=https://staging-api.terravoy.cn/
-IM_API_BASE_URL=https://staging-api.terravoy.cn
+PUBLIC_MEDIA_BASE_URL=https://api.terravoy.cn/
+IM_API_BASE_URL=https://api.terravoy.cn
 
 # Auth / tokens (leave blank in templates)
 AUTH_JWT_SECRET=
 ADMIN_JWT_SECRET=
 
 # CORS
-CORS_ORIGINS=https://staging-admin.terravoy.cn
+CORS_ORIGINS=https://admin.terravoy.cn
