chore: ip-based staging/prod docs and templates

--- a/.env.production.example
+++ b/.env.production.example
@@ -13,12 +13,12 @@ POSTGRES_DB=
 REDIS_URL=
 
 # Media / IM
-PUBLIC_MEDIA_BASE_URL=https://api.terravoy.cn/
-IM_API_BASE_URL=https://api.terravoy.cn
+PUBLIC_MEDIA_BASE_URL=http://39.105.212.81:3000/
+IM_API_BASE_URL=http://39.105.212.81:3000
 
 # Auth / tokens (leave blank in templates)
 AUTH_JWT_SECRET=
 ADMIN_JWT_SECRET=
 
 # CORS
-CORS_ORIGINS=https://admin.terravoy.cn
+CORS_ORIGINS=http://localhost:3001
