--- a/.env.staging.example
+++ b/.env.staging.example
@@ -1,6 +1,6 @@
 # Backend staging env template
 NODE_ENV=staging
-PORT=3000
+PORT=3100
 
 # Database
 POSTGRES_HOST=
@@ -13,12 +13,12 @@ POSTGRES_DB=
 REDIS_URL=
 
 # Media / IM
-PUBLIC_MEDIA_BASE_URL=https://staging-api.terravoy.cn/
-IM_API_BASE_URL=https://staging-api.terravoy.cn
+PUBLIC_MEDIA_BASE_URL=http://39.105.212.81:3100/
+IM_API_BASE_URL=http://39.105.212.81:3100
 
 # Auth / tokens (leave blank in templates)
 AUTH_JWT_SECRET=
 ADMIN_JWT_SECRET=
 
 # CORS
-CORS_ORIGINS=https://staging-admin.terravoy.cn
+CORS_ORIGINS=http://localhost:3001,http://localhost:3101
