fix: staging deployment scripts, IM auth/network config, and OSS signed URLs

--- a/.env.staging.example
+++ b/.env.staging.example
@@ -1,24 +1,57 @@
-# Backend staging env template
-NODE_ENV=staging
-PORT=3100
+# TerraVoy 后端 Staging 环境变量示例
+# 复制此文件为 .env.staging 并填入真实值
+# 使用方法: docker compose --env-file .env.staging up -d
 
-# Database
-POSTGRES_HOST=
+# ============================================
+# PostgreSQL 数据库
+# ============================================
+POSTGRES_HOST=terravoy-db-staging
 POSTGRES_PORT=5432
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_secure_password_here
+POSTGRES_DB=terravoy_staging
 
+# ============================================
 # Redis
-REDIS_URL=
+# ============================================
+REDIS_URL=redis://terravoy-redis-staging:6379/0
 
-# Media / IM
-PUBLIC_MEDIA_BASE_URL=http://39.105.212.81:3100/
-IM_API_BASE_URL=http://39.105.212.81:3100
+# ============================================
+# 认证 (关键：主后端和 IM 必须使用相同的值)
+# ============================================
+AUTH_JWT_SECRET=your_jwt_secret_here_must_be_same_for_api_and_im
+LOCAL_JWT_SECRET=your_local_jwt_secret
+TERRA_JWT_SECRET=your_terra_jwt_secret
+ADMIN_JWT_SECRET=your_admin_jwt_secret
 
-# Auth / tokens (leave blank in templates)
-AUTH_JWT_SECRET=
-ADMIN_JWT_SECRET=
+# ============================================
+# 主后端 API
+# ============================================
+PORT=3100
+NODE_ENV=production
 
-# CORS
-CORS_ORIGINS=http://localhost:3001,http://localhost:3101
+# ============================================
+# IM 服务配置 (重要：必须指向 staging 数据库)
+# ============================================
+# IM API 数据库连接 - 必须使用 staging 数据库，不要用默认的 im-db
+IM_DB_DSN=postgres://postgres:your_password@terravoy-db-staging:5432/terravoy_staging?sslmode=disable
+
+# IM Redis 连接 - 必须使用 staging Redis
+IM_REDIS_URL=redis://terravoy-redis-staging:6379/0
+
+# IM API 地址 (主后端调用 IM 的地址)
+# 使用容器名称直接通信，不要用外部 IP
+IM_API_BASE_URL=http://terravoy-im-api:8090
+
+# IM 消息保留策略
+IM_RETENTION_MATCH_DAYS=14
+IM_RETENTION_ORDER_DAYS=180
+
+# ============================================
+# OSS 存储
+# ============================================
+OSS_ENDPOINT=oss-cn-beijing.aliyuncs.com
+OSS_BUCKET_PUBLIC=your-public-bucket
+OSS_BUCKET_PRIVATE=your-private-bucket
+OSS_ACCESS_KEY_ID=your_access_key_id
+OSS_ACCESS_KEY_SECRET=your_access_key_secret
