feat: reviews, plaza moderation, and IM auth fixes

--- a/.env.staging.example
+++ b/.env.staging.example
@@ -5,7 +5,7 @@
 # ============================================
 # PostgreSQL 数据库
 # ============================================
-POSTGRES_HOST=terravoy-db-staging
+POSTGRES_HOST=terravoy-db
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=your_secure_password_here
@@ -34,7 +34,7 @@ NODE_ENV=production
 # IM 服务配置 (重要：必须指向 staging 数据库)
 # ============================================
 # IM API 数据库连接 - 必须使用 staging 数据库，不要用默认的 im-db
-IM_DB_DSN=postgres://postgres:your_password@terravoy-db-staging:5432/terravoy_staging?sslmode=disable
+IM_DB_DSN=postgres://postgres:your_password@terravoy-db:5432/terravoy_staging?sslmode=disable
 
 # IM Redis 连接 - 必须使用 staging Redis
 IM_REDIS_URL=redis://terravoy-redis-staging:6379/0
